package usercompute;

message FindFactorsRequest {
    repeated int32 nums = 1;
}

message FindFactorsResponse {
    repeated string factors = 1;
    optional string error_message = 2;
}

service UserComputeEngineService {
    rpc FindFactors(FindFactorsRequest) returns (FindFactorsResponse);
}
